# 3dti_AudioToolkit

./: .gitignore  .gitmodules  CMakeLists.txt  conanfile.txt
.github/workflows/: build.yml
3dti_Toolkit/BinauralSpatializer/: HRTF.cpp  HRTF.h  Listener.h  SingleSourceDSP.cpp
3dti_Toolkit/Common/: AIR.h  Buffer.h  Profiler.cpp  Quaternion.cpp  Quaternion.h  Vector3.cpp  Vector3.h
cmake/modules/: Findcereal.cmake
